@@ -51,6 +51,7 @@
 - fix kernel verion check of version components.
 - dont retry ldap connect if not required.
 - fix initialization in rpc create_client().
+- fix libtirpc name clash.
 
 28/06/2011 autofs-5.0.6
 -----------------------
